c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/default_outside_switch.c
int main(void) {
    {
        // case statements can only appear inside switch statements
        default: return 0;
    }
}